<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/shortsViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_thumb_up"
            android:contentDescription="@string/like_video"/>

        <TextView
            android:id="@+id/likesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:text="0"
            android:layout_marginBottom="24dp"/>

        <ImageButton
            android:id="@+id/commentButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_comment"
            android:contentDescription="@string/comments"/>

        <TextView
            android:id="@+id/commentsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:text="0"
            android:layout_marginBottom="24dp"/>

        <ImageButton
            android:id="@+id/shareButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_share"
            android:contentDescription="@string/share"/>

        <TextView
            android:id="@+id/shareCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:text="Share"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
